spacing fixes

--- a/src/components/scss/customStyles.scss
+++ b/src/components/scss/customStyles.scss
@@ -240,6 +240,7 @@ html,body{
     min-height: 2rem;
     display: flex;
     align-items: center;
+    margin: 0.5rem 0;
     section{
         display: flex;
         width: 4rem;
@@ -253,8 +254,8 @@ html,body{
             border-radius: 50%;
             border: 1px solid $primary-light;
             margin: 0.2rem;
-            width: 3rem;
-            height: 3rem;
+            width: 2rem;
+            height: 2rem;
             &:hover{
                 background-color: $primary-dark;
             }
@@ -290,13 +291,20 @@ html,body{
 .mainNavBar{
     max-width: $containerWidth;
     width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
+    .navItem{
+        height: 100%;
+        box-sizing: border-box;
+        padding: 0 0.8rem;
+    }
     .active{
         //font-weight: bold;
         font-size: 1.1rem;
-        border-bottom: 0.2rem solid white;
+        border-bottom: 0.3rem solid white;
     }
+    
 }
 
 
@@ -354,7 +362,13 @@ html,body{
     grid-template-rows: repeat(6,1fr);
     
     .postBoardProfile{
+        margin-top: 8rem;
         grid-column: 1/-1;
+        h1{
+            font-size: 2rem;
+            /* text-align: center; */
+            border-bottom: 2px solid white;
+        }
     }
 }
 .userBanner{
@@ -434,6 +448,7 @@ html,body{
         /* background-color: $secondary-light; */
         grid-column: 1/4;
         min-height: 14rem;
+        align-self: center;
 
         input, textarea{
             color: white;
@@ -504,6 +519,7 @@ html,body{
 }
 
 .commentForm{
+    margin-top: 3rem;
     width: 100%;
     max-width: 50rem;
     height: 10rem;
